feat :recycle: Refactor Components Se planteo una manera mas eficiente de utilizar el componente lista, con el fin de no plantear codigo tan repetitivo sino mas interactivo

--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@
   .App-logo {
     animation: App-logo-spin infinite 0.98s linear;
   }
-  header img {
+  /* header img {
     animation: App-logo-spin infinite 3s linear;
-  }
+  } */
 }
 
 .App-header {
